@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T00:44:10Z",
+  "timestamp" : "2022-07-12T08:20:46Z",
   "count_outdated" : 1702,
   "uniques_outdated" : 107,
-  "count" : 1705,
-  "uniques" : 110,
+  "count" : 1710,
+  "uniques" : 111,
   "views" : [
     {
       "timestamp": "2022-07-03T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
