@@ -1,5 +1,5 @@
 {
-  "count": 3,
+  "count": 8,
   "uniques": 1,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 5,
       "uniques": 1
     }
   ]
