@@ -1,3 +1,10 @@
+2022-07-12T08:20:46Z:
+* notice: last 14d: unq all: 1 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 107 1702 / 110 1705
+* notice: next accum: outdated-unq outdated-all / unq all: 107 1702 / 111 1710
+* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
+* notice: removed / changed dates: [] / [2022-07-12]
+
 2022-07-12T00:44:10Z:
 * notice: last 14d: unq all: 1 3
 * notice: prev accum: outdated-unq outdated-all / unq all: 106 1697 / 110 1705
